# train-trouble

./: .gitignore  Cargo.toml  Containerfile  README.md
docs/: Locations.sla  Makefile  engine.md  game.md  rules.md  setup.md
train-trouble/: Cargo.toml
train-trouble-client/: index.html  package-lock.json  package.json  vite.config.ts
train-trouble-client/src/: main.css  main.ts
train-trouble-client/src/components/: App.svelte  CrashStatus.svelte  GameScreen.svelte  Map.svelte  MapScreen.svelte  Router.svelte  Simulator.svelte  TeamSelect.svelte  ToastBanner.svelte  TrackControls.svelte  TradeForm.svelte  Zone.svelte
train-trouble-client/src/engine/: index.ts  reconnect.ts  watchdog.ts
train-trouble-client/src/lib/: actions.ts  channels.ts  state.ts  storage.ts  toasts.ts  views.ts
train-trouble-engine/: Cargo.toml
train-trouble-engine-client/: package-lock.json  package.json  tsconfig.json
train-trouble-engine-client/src/: index.ts  watchdog.ts
train-trouble-engine/src/: channel_map.rs  game_loop.rs  lib.rs  save.rs  server.rs  state.rs
train-trouble-engine/src/server/: messages.rs  mod.rs  socket.rs
train-trouble/src/: main.rs  timers.rs  tri_state.rs  view.rs  zones.rs
train-trouble/src/railroad/: map.rs  mod.rs  state.rs
train-trouble/src/resources/: market.rs  mod.rs
