[package]
name = "train-trouble-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["ws"] }
parking_lot = "0.12.3"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = [
    "parking_lot",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }
