[package]
name = "train-trouble"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-map = { version = "2.7.3", features = ["serde"] }
rand = "0.8.5"
rand_pcg = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0.210", features = ["derive"] }
train-trouble-engine = { version = "0.1.0", path = "../train-trouble-engine" }
